Fixed cards alignment

--- a/styles.css
+++ b/styles.css
@@ -151,16 +151,18 @@ nav ul li a:hover {
 /*Skills section*/
 .card {
   position: relative;
-  width: 220px;
-  height: 320px;
+  width: 260px;
+  height: 360px;
   background: black;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 25px;
+  font-size: 30px;
   font-weight: bold;
-  border-radius: 15px;
+  border-radius: 20px;
   cursor: pointer;
+  margin: 0 50px;
+  flex-shrink: 0;
 }
 
 .card::before,
@@ -216,12 +218,12 @@ nav ul li a:hover {
 
 .skills div{
   max-width: 800px;
-  margin-bottom: 40px;
 }
 
 .allcards{
   display: flex;
-  
+  justify-content: space-between;
+  padding-top: 100px;
 }
 
 
